fix the rest of the issues I found